--- a/Linkbrary/src/pages/signup/index.html
+++ b/Linkbrary/src/pages/signup/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linkbrary</title>
-    <link rel="stylesheet" href="/src/assets/css/reset.css">
-    <link rel="stylesheet" href="/src/assets/scss/pages/_auth-page.scss">
+    <link rel="stylesheet" href="../../assets/css/reset.css">
+    <link rel="stylesheet" href="../../assets/scss/pages/_auth-page.scss">
 </head>
 
 <body>
@@ -15,13 +15,13 @@
             <div class="sign-top">
                 <h1>
                     <a href="index.html">
-                        <img src="/src/assets/img/logo.svg" alt="Linkbrary" class="sign-logo">
+                        <img src="../../assets/img/logo.svg" alt="Linkbrary" class="sign-logo">
                     </a>
                     <span class="blind">Linkbrary</span>
                 </h1>
                 <div class="join">
                     <span>이미 회원이신가요?</span>
-                    <a href="/src/pages/signin/index.html" class="sign-link">로그인 하기</a>
+                    <a href="../signin/index.html" class="sign-link">로그인 하기</a>
                 </div>
             </div>
             <form action="" method="post" class="sign-form" id="sign-up-form">
@@ -34,8 +34,8 @@
                     <div class="pw-input">
                         <input type="password" id="password" name="password" required class="sign-input text-input">
                         <button type="button" class="pw-toggle-btn">
-                            <img src="/src/assets/img/eye-on.svg" alt="Show Password" class="hidden">
-                            <img src="/src/assets/img/eye-off.svg" alt="Hide Password">
+                            <img src="../../assets/img/eye-on.svg" alt="Show Password" class="hidden">
+                            <img src="../../assets/img/eye-off.svg" alt="Hide Password">
                         </button>
                     </div>
                 </div>
@@ -45,8 +45,8 @@
                         <input type="password" id="password-check" name="password-check" required
                             class="sign-input text-input">
                         <button type="button" class="pw-toggle-btn">
-                            <img src="/src/assets/img/eye-on.svg" alt="Show Password" class="hidden">
-                            <img src="/src/assets/img/eye-off.svg" alt="Hide Password">
+                            <img src="../../assets/img/eye-on.svg" alt="Show Password" class="hidden">
+                            <img src="../../assets/img/eye-off.svg" alt="Hide Password">
                         </button>
                     </div>
                 </div>
@@ -57,10 +57,10 @@
                     다른 방식으로 가입하기
                     <div class="social-links">
                         <a href="https://www.google.com/" target="_blank" rel='noreferrer noopener'>
-                            <img src="/src/assets/img/google.svg" alt="Google Sign In Link">
+                            <img src="../../assets/img/google.svg" alt="Google Sign In Link">
                         </a>
                         <a href="https://www.kakaocorp.com/page/" target="_blank" rel='noreferrer noopener'>
-                            <img src="/src/assets/img/kakao.svg" alt="Kakao Sign In Link" class="img-border">
+                            <img src="../../assets/img/kakao.svg" alt="Kakao Sign In Link" class="img-border">
                         </a>
                     </div>
                 </div>
