--- a/signin.html
+++ b/signin.html
@@ -1,61 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-
-  <!-- font: abel -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-  <!-- font: acme -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
-  
-  <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="style-signin.css">
-
-  <title>signin</title>
+  <title>로그인</title>
+  <meta
+  name="viewport"
+  content="width=device-width,minimum-scale=1,initial-scale=1,maximum-scale=1,user-scalable=no"
+  />
+  <link
+  rel="stylesheet"
+  type="text/css"
+  href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+  />
+  <link rel="stylesheet" href="./src/sign.css">
 </head>
-
 <body>
-  <div class="wrapper">
-    <div class="content">
-      <a class="logo" href="../landing.html" target="_blank">
-        <img alt="logo" src="../images/logo.svg">
-      </a>
-      <h1 class="text">
-        회원이 아니신가요?
-        <a class="text signup" href="../signup/signup.html">회원 가입하기</a>
-      </h1>
-      <form class="form">
-        <label class="label" for="username">이메일</label>
-        <div class="username-container">
-          <input type="text" id="username" class="input" name="username" placeholder="codeit@codeit.kr">
-          <div class="text-error">이메일을 입력해주세요</div>
+<!-- header -->
+  <header>
+    <a class="logo-link" href="./index.html" target="_blank">
+      <img class="header-logo" src="./images/logo.svg" alt="랜딩 페이지로 연결되는 로고 이미지" >
+    </a>
+    <p class="header-message">
+      회원이 아니신가요? <a class="header-link" href="./signup.html">회원 가입하기</a>
+    </p>
+  </header>
+<!-- rest -->
+  <div class="sign-box">
+
+    <form id="form" class="sign-form">
+      <div class="sign-inputs">
+        <div class="sign-input-box">
+          <label class="sign-input-label">이메일</label>
+          <input id="email" class="sign-input">
+          <p id="email-error-message" class="error-message"></p>
         </div>
-        <label class="label" for="password">비밀번호</label>
-        <div class="password-container">
-          <input type="password" id="password" class="input" name="password" placeholder="비밀번호">
-          <div class="password-toggle eye-slash"></div> 
-          <div class="text-error">비밀번호를 입력해주세요</div>
+
+        <div class="sign-input-box sign-password">
+          <label class="sign-input-label">비밀번호</label>
+          <input id="password" class="sign-input" type="password">
+          <p id="password-error-message" class="error-message"></p>
+          <button id="password-toggle" class="eye-button" type="button">
+            <img src="./images/eye-off.svg" />
+          </button>
         </div>
-        <input type="button" id="submit" class="btn" value="로그인">
-      </form>  
-  
-      <div class="social">
-        <p>소셜 로그인</p>
-        <div class="icons">
-          <a href="https://www.google.com/" target="social">
-            <img alt="google_account" src="../images/icon_google.svg" width 42>
-          </a>
-          <a href="https://www.kakaocorp.com/" target="social">
-            <img alt="kakao_account" src="../images/icon_kakao.svg" width 42>
-          </a>
-        </div>
+      </div>
+      <button class="cta" type="submit">로그인</button>
+    </form>
+    <div class="sns-box">
+      <span class="sns-text">소셜 로그인</span>
+      <div class="sns-links">
+        <a class="sns-link google-link" href="https://www.google.com/">
+          <img src="./images/icon_google.png">
+        </a>
+        <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
+          <img src="./images/icon_kakao.svg">
+        </a>
       </div>
     </div>
   </div>
-  <script src="index.js"></script>
+  <script type="module" src="./src/signin.js"></script>
 </body>
 </html>
