--- a/signup.html
+++ b/signup.html
@@ -1,67 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-
-  <!-- font: abel -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-  <!-- font: acme -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
-  
-  <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="style-signup.css">
-
-  <title>signup</title>
-</head>
-
-<body>
-  <div class="wrapper">
-    <div class="content">
-      <a class="logo" href="../landing.html" target="_blank">
-        <img alt="logo" src="../images/logo.svg">
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>회원가입</title>
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+    />
+    <link rel="stylesheet" href="./src/sign.css" />
+  </head>
+  <body>
+    <header>
+      <a class="logo-link" href="index.html">
+        <img class="header-logo" src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
       </a>
-      <h1 class="text">
-        이미 회원이신가요?
-        <a class="text signin" href="../signin/signin.html">로그인하기</a>
-      </h1>
-      <form class="form">
-        <label class="label" for="username">이메일</label>
-        <div class="username-container">
-          <input type="text" id="username" class="input" name="username" placeholder="codeit@codeit.kr">
-        <div class="text-error">이메일을 입력해주세요</div>
+      <p class="header-message">
+        이미 회원이신가요?<a class="header-link" href="signin.html">로그인 하기</a>
+      </p>
+    </header>
+    <div class="sign-box">
+      <form class="sign-form">
+        <div class="sign-inputs">
+          <div class="sign-input-box">
+            <label class="sign-input-label">이메일</label>
+            <input class="sign-input" />
+          </div>
+          <div class="sign-input-box sign-password">
+            <label class="sign-input-label">비밀번호</label>
+            <input class="sign-input" type="password" />
+            <button class="eye-button" type="button">
+              <img src="./images/eye-off.svg" />
+            </button>
+          </div>
+          <div class="sign-input-box sign-password">
+            <label class="sign-input-label">비밀번호 확인</label>
+            <input class="sign-input" type="password" />
+            <button class="eye-button" type="button">
+              <img src="./images/eye-off.svg" />
+            </button>
+          </div>
         </div>
-        <label class="label" for="password">비밀번호</label>
-        <div class="password-container">
-          <input type="password" id="password" class="input" name="password" placeholder="비밀번호">
-          <div class="password-toggle eye-slash"></div>
-          <div class="text-error">비밀번호를 입력해주세요</div>
-        </div>
-        <label class="label" for="password_repeat">비밀번호 확인</label>
-        <div class="repeat-container">
-          <input type="password" id="password_repeat" class="input" name="password_repeat" placeholder="비밀번호 확인">
-          <div class="repeat-toggle eye-slash"></div>
-          <div class="text-error">비밀번호를 입력해주세요</div>
-        </div>
-        <input type="button" id="submit" class="btn" value="회원가입">
-      </form>  
-
-      <div class="social">
-        <p>다른 방식으로 가입하기</p>
-        <div class="icons">
-          <a href="https://www.google.com/" target="social">
-            <img alt="google_account" src="../images/icon_google.svg" width 42>
+        <button class="cta" type="submit">회원가입</button>
+      </form>
+      <div class="sns-box">
+        <span class="sns-text">다른 방식으로 가입하기</span>
+        <div class="sns-links">
+          <a class="sns-link google-link" href="https://www.google.com/">
+            <img src="./images/icon_google.png" />
           </a>
-          <a href="https://www.kakaocorp.com/" target="social">
-            <img alt="kakao_account" src="../images/icon_kakao.svg" width 42>
+          <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
+            <img src="./images/icon_kakao.svg" />
           </a>
         </div>
       </div>
     </div>
-  </div>
-  <script src="index.js"></script>
-</body>
+  </body>
 </html>
